--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-  "public": true,
   "routes": [
+    {
+      "src": "/(.*)\\.(css|js|png|jpg|jpeg|gif|svg)",
+      "dest": "/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
